--- a/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
@@ -5,7 +5,10 @@
 
 .avatar-container{
 
-  overflow: hidden;
+  &:not(.no-overflow){
+    overflow: hidden;
+  }
+
   &.with-border{
     border-radius: 6px;
     border: 2px solid #888;
