--- a/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
@@ -1,5 +1,5 @@
 mixin LabeledCheckbox(text, name, val, isReadOnly)
-    .labeled-checkbox
+    div(class=attributes.containerClass).labeled-checkbox
         +Checkbox(name, val, isReadOnly)(attributes).checkbox
         label(for=attributes.id)=text
 
