--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementStudentAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementStudentAttachments.jade
@@ -1,6 +1,7 @@
 #attach-file-area.announcement-item.attach-file-area
-    div.simple-gray-button.file Attach File
-        +FileUpload('announcement', 'uploadAttachment', [self.getId().valueOf()])#add-attachment.simple-gray-button
+    if self.isGradable()
+        div.simple-gray-button.file Attach File
+            +FileUpload('announcement', 'uploadAttachment', [self.getId().valueOf()])#add-attachment.simple-gray-button
 each attachment, i in self.getAnnouncementAttachments()
     if attachment.isOwner()
         .announcement-item.attachment
