added PostGrades functionality

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
@@ -61,6 +61,8 @@ mixin DisplayTotalPoints(model)
                     div(data-tooltip="Withdrawn").withdrawn
         .student-name
             .dotted-h=Msg.Avg
+            if self.getGradingPeriod().isAblePostGradeBook()
+                +ActionLinkButton('grading','postGradeBook', self.getClassId(), self.getGradingPeriod().getId()).message-button.blue-gradient-btn.post-gradebook-button Post
     +LeftRightToolbar()(
         needDots = true,
         roundedDots = true,
