--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -539,6 +539,13 @@ BODY {
                         line-height: 46px;
                       }
 
+                      .post-gradebook-button{
+                        position: absolute;
+                        top: 7px;
+                        left: 70px;
+                        padding: 0px 20px 0px 20px;
+                      }
+
                       .dotted-h{
                         position: relative;
 
