--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandards.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandards.jade
@@ -16,12 +16,22 @@
                 +ActionLink('grading', "summaryGrid", selectedId)=Msg.Item(true)
                 +ActionLink('grading', "standardsGrid", selectedId).pressed=Msg.Standard(true)
     .mps-container
+        .chlk-pop-up-container.popup-top.comment
+            .pop-up-triangle
+            div
+                h5=Msg.Add_comment
+                .text-container
+                    textarea.comment-value
+                    .grading-comments-list
+                a(href="javascript:").grey-button.small.cancel-comment=Msg.Cancel
+                a(href="javascript:").blue-button.small.add-comment.right=Msg.Add
         each item,i in self.getItems()
             gradingPeriod = item.getGradingPeriod()
             div(class=(gradingPeriod.getId() == self.getGradingPeriodId()) ? "open" : "", data-index=i).marking-period-container
                 div(data-tooltip=(item.getAvg() != null ? Msg.Avg + " " + item.getAvg() : 'No grades yet')).mp-title
                     mpName = gradingPeriod.getName()
                     span(data-tooltip=mpName, data-tooltip-type="overflow")=mpName
+                    a(href="javascript:").grey-button.comment-button=Msg.Comment
                     .collapse
                 .mp-data
                     .ann-types-container
@@ -45,16 +55,11 @@
                                     title = gradingItem.getTitle()
                                     div(data-tooltip=title, data-tooltip-type="overflow").type-name=title
                                     each info,i in gradingItem.getItems()
-                                        normalValue = info.getGradeValue()
-                                        div(row-index=i, class=(parseInt(normalValue, 10) ? '' : 'letter')).dotted-h.grade-value
-                                            .value=normalValue
-                                            .edit-cell
-                                            +ActionForm('grading', 'updateStandardGradeFromGrid')
-                                                +Hidden('standardid', info.getStandardId())
-                                                +Hidden('gradeid', info.getGradeId())
-                                                +Hidden('classid', info.getClassId())
-                                                +Hidden('gradingperiodid', info.getGradingPeriodId())
-                                                if item.getStudents()[i]
-                                                    +Hidden('studentid', item.getStudents()[i].getStudentInfo().getId())
-                                                input(value=normalValue, name="gradevalue").grade-autocomplete
+                                        div(
+                                            row-index=i,
+                                            data-student-id=info.getStudentId().valueOf(),
+                                            data-standard-id=info.getStandardId().valueOf(),
+                                            data-grading-period-id=gradingPeriod.getId().valueOf()
+                                        ).dotted-h.grade-value.letter
+                                            +RenderWith(info, chlk.templates.grading.TeacherClassGradingGridStandardsItemTpl)
                                     .dotted-h.grade-value=gradingItem.getAlphaGradeNameAvg()
