--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandardsItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandardsItem.jade
@@ -11,4 +11,4 @@ if self.getComment()
         data-comment = self.getComment()
     ).comment-value
     +Hidden('studentid', self.getStudentId().valueOf())
-    input(value=self.getGradeValue(), name="gradevalue").grade-autocomplete
+    input(value=self.getGradeValue(), name="gradevalue").grade-autocomplete.value-input
