--- a/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
@@ -168,4 +168,60 @@
   border-radius: 4px;
   @include box-shadow(0 10px 25px rgba(0, 0, 0, 0.5));
   padding: 12px 17px;
+
+  &.new-style{
+    padding: 0;
+
+    b{
+      margin-right: 4px;
+    }
+
+    h1{
+      font: bold 18px Arial;
+      text-align: center;
+      border-bottom: 1px solid #c4c4c4;
+      @include box-shadow(0 1px 0 white);
+      padding: 19px 0 17px;
+    }
+
+    .popup-content{
+      padding: 20px 0 0 0;
+      text-align: center;
+      color: #808080;
+      font: normal 14px Arial;
+
+      h2{
+        font: normal 30px Jrhand;
+        color: #407d9b;
+      }
+    }
+
+    .buttons-bottom{
+      border-top: 1px solid #c4c4c4;
+      @include box-shadow(0 1px 0 white inset);
+      margin-top: 17px;
+      text-align: center;
+
+      .chlk-button{
+        padding: 7px;
+        height: auto;
+        margin: 5px 5px 9px;
+        font: normal 14px Arial;
+
+        a{
+          line-height: 14px;
+        }
+      }
+
+      BUTTON{
+        width: 77px;
+      }
+
+      .action-button{
+        width: 61px;
+        display: inline-block;
+
+      }
+    }
+  }
 }
