--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -27,7 +27,8 @@ classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : []
         .ann-form-container(class=(classId && typeId ? '' : 'x-hidden'))
             +BaseAnnouncementFormContainer(announcement, classId, null, null, self.getUserRole()).announcement-form
             if announcement.getState()
-                +ActionLinkButton('announcement', 'showDuplicateForm', announcement.getId(), topData.getSelectedItemId()).special-button.blue-button.submit-btn=Msg.Duplicate
+                .duplicate-btn-container
+                    +ActionLinkButton('announcement', 'showDuplicateForm', announcement.getId(), topData.getSelectedItemId()).special-button.blue-button.submit-btn=Msg.Duplicate.toUpperCase()
         .choose-type(class=(classId && !typeId ? '' : 'x-hidden'))
         .choose-class(class=(classId ? 'x-hidden' : ''))
     +AddEditReminderForm(announcement, self.reminders)
