fixed for CHLK-2622 Student: should not be able to see other student's alerts
CHLK-2621 Profile images: use 'background-size: cover;'

--- a/Chalkable.Web/assets/jade/controls/image.jade
+++ b/Chalkable.Web/assets/jade/controls/image.jade
@@ -7,7 +7,7 @@ mixin PersonImg(person, size, noAlerts)
         src = chlk.templates.ChlkTemplate.prototype.getPictureURL(person.getId(), size, size)
         isWoman = person.getGender().toLowerCase() == 'f';
         alternativeHref = joinUrls(window.scriptsRoot, 'Content/avatars/' + size + '/.no-avatar') + (isWoman ? '-female' : '') + '.png';
-        p = !noAlerts && person.showAlerts()
+        p = !noAlerts && person.showAlerts() && self.canShowAlert(person)
         div(style=p ? "overflow: visible" : "").avatar-wrapper
             if p
                 top = self.getAlertsAttributes(person)
