fixed grading codes

--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -156,7 +156,7 @@ BODY {
             }
 
             .gp-button{
-              display: none;
+              //display: none;
             }
 
             .student-grading-summary{
