--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingTopPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingTopPart.jade
@@ -6,7 +6,7 @@ autoCount = self.getAutoGradeCount()
         =Msg.Grade_manually
 div(data-tooltip=Msg.Class_Avg).class-avg=self.getClassAvg()
 //self.getGrade(self.getClassAvg())
-div(class=self.isShowToStudents() ? "" : "not-show", data-value="#{self.isShowToStudents()}").show-student-grades
+div(class=self.isShowToStudents() ? "" : "not-show", data-value="#{self.isShowToStudents()}").show-student-grades.x-hidden
     .chlk-pop-up-container.popup-top
         .pop-up-triangle
         .show-student-grades-container
